# youbot_simulation

./: .gitignore  README.md
youbot_gazebo_control/: CMakeLists.txt  package.xml  youbot_gazebo_control_plugins.xml
youbot_gazebo_control/config/: arm_1_controller.yaml  arm_1_gripper_position_controller.yaml  arm_1_gripper_velocity_controller.yaml  arm_1_vel_controller.yaml  arm_1_velocity_controller.yaml  arm_2_controller.yaml  arm_2_gripper_controller.yaml  arm_2_gripper_position_controller.yaml  arm_2_gripper_velocity_controller.yaml  arm_2_position_controller.yaml  arm_2_velocity_controller.yaml  arm_controller.yaml  base_controller.yaml
youbot_gazebo_control/launch/: arm_controller.launch  base_controller.launch  gripper_controller.launch  joint_state_controller.launch  vel_arm_controller.launch
youbot_gazebo_control/src/: arm_joint_vel_convertor.cpp  steered_wheel_base_controller.cpp
youbot_gazebo_models/: CMakeLists.txt  package.xml
youbot_gazebo_models/models/box_room/: model.config  model.sdf
youbot_gazebo_models/models/box_room/meshes/: box_room.dae
youbot_gazebo_robot/: CMakeLists.txt  package.xml
youbot_gazebo_robot/launch/: spawn_youbot_description.launch.py  spawn_youbot_ros2.launch.xml  start_world.launch.py  vel_youbot_arm.launch  youbot.launch  youbot_arm_only.launch  youbot_base_only.launch  youbot_dual_arm.launch  youbot_with_cam3d.launch
youbot_gazebo_worlds/: CMakeLists.txt  package.xml
youbot_gazebo_worlds/launch/: empty_world.launch  robocup_at_work_2012.launch  tower_of_hanoi.launch  youbot_empty.world
youbot_gazebo_worlds/urdf/: robocup_at_work_2012.urdf
youbot_simulation/: CMakeLists.txt  package.xml
