<?xml version="1.0"?>
<package>
  <name>youbot_gazebo_control</name>
  <version>0.1.0</version>
  <description>Controller</description>

  <maintainer email="nowak@locomotec.com">Walter Nowak</maintainer>
  <maintainer email="blumenthal@locomotec.com">Sebastian Blumenthal</maintainer>

  <license>GPLv3</license>

  <url type="website">http://github.com/mas-group/youbot_simulation</url> -->

  <author email="frederik.hegger@h-brs.de">Frederik Hegger</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslint</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>

  <test_depend>roslaunch</test_depend>
  
  <export>
    <controller_interface plugin="${prefix}/youbot_gazebo_control_plugins.xml"/>
  </export>

</package>
